--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 				<li><a href="#">Shop</a></li>
 				<li><a href="#">Contact</a></li>
 			</ul>
-		</div>
+	
 
 	</header>
 	<main>
 		<section class="section main-slider">
 			<img src="images/banner.jpeg" alt="Slide 1">
-		</section>
+		
 		<div class="row"> 
 		
-			<ul class="C">
+			<ul class="col-66">
 			<div class="air">
 			<img src="images/icon02.png" alt="Vintage"> </div>
 			
@@ -39,8 +39,8 @@
 				<ul class="menu">
 					<img src="images/icon03.png" alt="icon">
 					<h1>Vintage Oliva</h1>
-					<div class="A">
-						<ul class="B">
+					<div class="col-inner">
+						<ul class="col col-inner">
 					<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
 					labore et dolore magna aliqua. 
 					Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
@@ -52,12 +52,11 @@
 				</ul>
 		</div>
 			<div class="row1"> 
-			
-				<ul class="menu1">
+				<ul class="col-33">
 					<img src="images/Screenshot_2.png" alt="icon1">
 					<h1>La Bariosa</h1>
-					<div class="A">
-						<ul class="B">
+					<div class="col-inner">
+						<ul class="col col-inner">
 					<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
 					labore et dolore magna aliqua. 
 					Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
@@ -82,6 +81,7 @@
 			
 						<img src="images/img05.jpg" alt="Flex1">
 						</ul>
+						
 						<ul class="flex2">
 						<div class="E">
 						<img src="images/icon07.png" alt="Flex2">
@@ -97,8 +97,9 @@
 					<ul class="flex3">
 					<img src="images/img07.jpg" alt="Flex3">
 				</ul>
-				</div>
+				</div>	</div>
 	</main>
+	</section>
 	<footer class="footer">
 	</footer>
 </div>
